# tire_env

./: .gitignore  README.md  main.py  pyproject.toml
config/: env_config.yaml
notebooks/: visualize_train_data.ipynb  visualize_train_data_v2.ipynb
scripts/: check_train_data.py  gen_train_data.py  gen_train_data_v2.py  run_coacd.py  tire_mesh_gen.py
tests/: test_base.py
tire_env/: base.py  dataclasses.py  grid_util.py  tire_util.py
